{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 2053,
  "lineage": "ea14a9f5-9919-06f1-4f66-ae13ab950ec9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:loadbalancer/app/myapp-load-balancer/85e29eb3bd147e58",
            "arn_suffix": "app/myapp-load-balancer/85e29eb3bd147e58",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-load-balancer-421999941.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:loadbalancer/app/myapp-load-balancer/85e29eb3bd147e58",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "security_groups": [
              "sg-0da27cae6c6c04786"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0167ca90fddc5ddd4"
              },
              {
                "subnet_id": "subnet-095fb1c56b7dd8425"
              }
            ],
            "subnets": [
              "subnet-0167ca90fddc5ddd4",
              "subnet-095fb1c56b7dd8425"
            ],
            "vpc_id": "vpc-0f135b060bb2aef7a",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "testapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:listener/app/myapp-load-balancer/85e29eb3bd147e58/0c22df8665094787",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:targetgroup/myapp-tg/ecc3282140622bea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:listener/app/myapp-load-balancer/85e29eb3bd147e58/0c22df8665094787",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:loadbalancer/app/myapp-load-balancer/85e29eb3bd147e58",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.myapp-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "myapp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:targetgroup/myapp-tg/ecc3282140622bea",
            "arn_suffix": "targetgroup/myapp-tg/ecc3282140622bea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:517204143657:targetgroup/myapp-tg/ecc3282140622bea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "myapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f07279fd2a48ff4f",
            "association_id": "eipassoc-0968402af55b2399f",
            "domain": "vpc",
            "id": "eipalloc-0f07279fd2a48ff4f",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ef12259bec54ff2c",
            "private_dns": "ip-172-16-2-123.eu-central-1.compute.internal",
            "private_ip": "172.16.2.123",
            "public_dns": "ec2-3-74-244-24.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.244.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01590979f9653095a",
            "association_id": "eipassoc-03c4a271ba79c6303",
            "domain": "vpc",
            "id": "eipalloc-01590979f9653095a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0775c784a0195ae78",
            "private_dns": "ip-172-16-3-226.eu-central-1.compute.internal",
            "private_ip": "172.16.3.226",
            "public_dns": "ec2-3-125-212-206.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.212.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:internet-gateway/igw-0885763c12eae6d57",
            "id": "igw-0885763c12eae6d57",
            "owner_id": "517204143657",
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f07279fd2a48ff4f",
            "connectivity_type": "public",
            "id": "nat-0e79ffa3278dd2eaa",
            "network_interface_id": "eni-0ef12259bec54ff2c",
            "private_ip": "172.16.2.123",
            "public_ip": "3.74.244.24",
            "subnet_id": "subnet-095fb1c56b7dd8425"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01590979f9653095a",
            "connectivity_type": "public",
            "id": "nat-09ffa2749f43df033",
            "network_interface_id": "eni-0775c784a0195ae78",
            "private_ip": "172.16.3.226",
            "public_ip": "3.125.212.206",
            "subnet_id": "subnet-0167ca90fddc5ddd4"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0885763c12eae6d57",
            "id": "r-rtb-08b3ff3b130db0c6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b3ff3b130db0c6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:route-table/rtb-0ba4e01d71330d4a8",
            "id": "rtb-0ba4e01d71330d4a8",
            "owner_id": "517204143657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e79ffa3278dd2eaa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:route-table/rtb-0f27e37ad6471023b",
            "id": "rtb-0f27e37ad6471023b",
            "owner_id": "517204143657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ffa2749f43df033",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a744e94ec5a5443f",
            "route_table_id": "rtb-0ba4e01d71330d4a8",
            "subnet_id": "subnet-073cc84bbb1c9e4b5"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb2d38a08e4e33d9",
            "route_table_id": "rtb-0f27e37ad6471023b",
            "subnet_id": "subnet-0921e02d926da6f6a"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:security-group/sg-0da27cae6c6c04786",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da27cae6c6c04786",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "517204143657",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:security-group/sg-0bb8a65c742072dd6",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0bb8a65c742072dd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da27cae6c6c04786"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "517204143657",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:subnet/subnet-073cc84bbb1c9e4b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073cc84bbb1c9e4b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517204143657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:subnet/subnet-0921e02d926da6f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0921e02d926da6f6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517204143657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:subnet/subnet-095fb1c56b7dd8425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095fb1c56b7dd8425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517204143657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:subnet/subnet-0167ca90fddc5ddd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0167ca90fddc5ddd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517204143657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f135b060bb2aef7a"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517204143657:vpc/vpc-0f135b060bb2aef7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-03d16f2057ba1b944",
            "default_route_table_id": "rtb-08b3ff3b130db0c6f",
            "default_security_group_id": "sg-0a3287543f6b6655f",
            "dhcp_options_id": "dopt-0544e72549f00a3e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f135b060bb2aef7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b3ff3b130db0c6f",
            "owner_id": "517204143657"
          }
        }
      ]
    }
  ]
}